--- a/covers/worm/cover.xhtml
+++ b/covers/worm/cover.xhtml
@@ -6,6 +6,8 @@
     <style>
       body {
         text-align: center;
+        margin: 0;
+        padding: 0;
       }
       img {
         max-width: 100%;
